# Texture-Wall

./: .gitignore  CMakeLists.txt  README.md  Texture Contents.pptx  Texture wall打印注意事项.pptx  TextureWall.cpp  TextureWall.sln  TextureWall.vcxproj  TextureWall.vcxproj.filters  Textureadd.cpp  Textureadd.h  config  stdafx.cpp  stdafx.h  ~$Texture Contents.pptx
Debug/: TextureWall.ilk  vc141.idb  vc142.idb
Debug/TextureWall.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TextureWall.lastbuildstate  link.19712.delete.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Result/: OPattern1_80.000000_4_5.000000.gcode  OPattern1_8_2_3.000000.gcode  OPattern1_8_4_3.000000.gcode  OPattern1_8_6_3.000000.gcode  OPattern1_8_8_3.000000.gcode  OPattern2_80.000000_8_3.000000.gcode  OPattern2_8_2_4.000000.gcode  OPattern2_8_4_4.000000.gcode  OPattern2_8_6_4.000000.gcode  OPattern2_8_8_4.000000.gcode  OPattern3_80.000000_8_4.000000.gcode  OPattern3_8_2_4.000000.gcode  OPattern3_8_4_4.000000.gcode  OPattern3_8_6_4.000000.gcode  OPattern3_8_8_4.000000.gcode  OPattern4_80.000000_10_3.000000.gcode  OPattern4_80.000000_5_5.000000.gcode  OPattern4_80.000000_6_3.000000.gcode  OPattern4_80.000000_6_4.000000.gcode  OPattern4_80.000000_8_4.000000.gcode  OPattern4_8_2_4.000000.gcode  OPattern4_8_4_4.000000.gcode  OPattern4_8_6_4.000000.gcode  OPattern4_8_8_4.000000.gcode  OPattern5_80.000000_3_4.000000.gcode  OPattern5_80.000000_4_4.000000.gcode  OPattern5_80.000000_6_3.000000.gcode  OPattern5_80.000000_6_4.000000.gcode  OPattern6_80.000000_3_4.000000.gcode  OPattern6_80.000000_4_3.000000.gcode  OPattern6_80.000000_4_4.000000.gcode  OPattern6_80.000000_6_4.000000.gcode  OPattern6_80.000000_6_5.000000.gcode  OPattern6_80.000000_6_6.000000.gcode  OPattern6_80.000000_6_8.000000.gcode  OPattern6_80.000000_8_4.000000.gcode  OPattern7_80.000000_3_4.000000.gcode  OPattern7_80.000000_4_3.000000.gcode  OPattern7_80.000000_6_3.000000.gcode  OPattern7_80.000000_8_4.000000.gcode  (+56 more)
TextureWall/: Gcodegeneration.cpp  Gcodegeneration.h  Mapgeneration.cpp  Mapgeneration.h  Modelgeneration.cpp  Modelgeneration.h  ReadMe.txt  Setting.cpp  Setting.h  TextureWall.cpp  TextureWall.vcxproj  TextureWall.vcxproj.filters  Textureadd.cpp  Textureadd.h
TextureWall/Debug/: vc140.idb
TextureWall/Debug/TextureWall.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TextureWall.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TextureWall/x64/Debug/: vc140.idb
TextureWall/x64/Debug/TextureWall.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TextureWall.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: TextureWall.ilk
